# MTS2D

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  ReadMe.md  callgrind.out.493341  callgrind.out.522775  callgrind.out.523197  largeSimulation.yaml  prompt.txt
Deployment/: buildOnCluster.py
Management/: benchmarking.py  buildOnCluster.py  clusterStatus.py  configGenerator.py  connectToCluster.py  dataManager.py  jobManager.py  libraryManagement.py  runOnCluster.py  runSimulation.py  runSimulations.py  setupSSH.py  simulationManager.py  test.py
Ovito/: testing.ovito
Plotting/: main.py  makeAnimation.py  makeAnimations.py  makeAveragePlot.py  makeEnergyField.py  makePlots.py  plotAll.py  plotSimulation.py  remotePlotting.py  settings.py  vtkFunctions.py
Plotting/Python/: plotSimulation.py
_gael_2D/: boundary_conditions.h  new_gael_2D
deployment/: buildOnCluster.py  runOnCluster.py
gael_2D/: boundary_conditions.cpp  gael_2D.cpp  utility_functions.h
libs/FIREpp/FIRE/: FIRE.h  MolecularDynamics.h  Param.h
libs/alglib-cpp/src/: alglibmisc.cpp  alglibmisc.h  dataanalysis.h  fasttransforms.cpp  fasttransforms.h  integration.cpp  integration.h  interpolation.cpp  interpolation.h  kernels_fma.h  kernels_sse2.h  linalg.h  optimization.cpp  statistics.h
libs/alglib/src/: alglibinternal.cpp  alglibinternal.h  ap.cpp  ap.h  dataanalysis.cpp  diffequations.cpp  diffequations.h  kernels_avx2.cpp  kernels_avx2.h  kernels_fma.cpp  kernels_sse2.cpp  linalg.cpp  optimization.cpp  optimization.h  solvers.cpp  solvers.h  specialfunctions.cpp  specialfunctions.h  statistics.cpp
libs/cereal/: CMakeLists.txt
libs/easylogging++/: logging.conf
libs/itensorCmake/: CMakeLists.txt
output/ovito/: 1Init.xyz  2BC.xyz  3Guess.xyz  4Relaxed.xyz  data.xyz
src/: boundary_conditions.cpp  common_2D.h  dataExport.h  energy_and_stress_calculations.h  grid2D.h  largeSimulation.conf  large_calculations.h  main.cpp  matrix.h  matrix2x2.h  settings.h  simulation.cpp  simulation.h  simulationSettings.yaml  singelton.h  smallSimulation.conf  smallSimulation.yaml  structures.h  test.cpp
src/Data/: cereal_help.cpp  cereal_help.h  dataExport.cpp  dataExport.h  data_export.cpp  data_export.h  lean_vtk.cpp  lean_vtk.h  logging.cpp  logging.h  paramParser.cpp  paramParser.h  param_parser.cpp  param_parser.h
src/Energy/: energy_and_stress_calculations.h
src/Grid/: grid2D.cpp  grid2D.h
src/Matrix/: IndexingOrder.txt  matrix.h  matrix.tpp  matrix2x2.h  matrix2x2.tpp
src/Mesh/: cell.cpp  cell.h  compare_macros.h  mesh.cpp  mesh.h  node.cpp  node.h  tElement.cpp  tElement.h  triangle.cpp  triangle.h
src/Simulation/: energyFunctions.cpp  energyFunctions.h  energyPlotting.h  meshManipulations.h  randomUtils.h  scenarios.cpp  scenarios.h  simulation.cpp  simulation.h
src/Surface/: surface.cpp  surface.h
src/Utility/: logging.h  macrologger.h  singelton.h  singleton.h
tests/: grid2D_test.cpp  matrix2x2_test.cpp  matrix_test.cpp  mesh_test.cpp  node_test.cpp  remeshing_test.cpp  simulation_test.cpp  singelton_test.cpp  tElement_test.cpp
tests/run/: Makefile  run_tests  run_tests.cpp
tests/run/run_tests.dSYM/Contents/Resources/DWARF/: run_tests
tests/run/run_tests.dSYM/Contents/Resources/Relocations/aarch64/: run_tests.yml
